@@ -1,11 +1,11 @@
 Package: mclogit
 Type: Package
 Title: Mixed Conditional Logit Models
-Version: 0.4-1
-Date: 2015-07-19
+Version: 0.4.3
+Date: 2016-01-16
 Author: Martin Elff
-Maintainer: Martin Elff <elff@gmx.com>
-Description: This packages provides allows to estimate conditional logit models of binary responses and multinomial counts,
+Maintainer: Martin Elff <mclogit@elff.eu>
+Description: Specification and estimation of conditional logit models of binary responses and multinomial counts is provided,
   with or without alternative-specific random effects (random intercepts only, no random slopes yet).
   The current implementation of the estimator for random effects variants of the model uses a Laplace approximation (or PQL) 
   approach and thus should be used only if groups sizes are large.
@@ -13,4 +13,4 @@ License: GPL-2
 Depends: stats, Matrix
 Imports: memisc
 LazyLoad: Yes
-URL: http://www.martin-elff.net/software/mclogit/,http://github.com/melff/mclogit/releases
+URL: http://www.elff.eu/software/mclogit/,http://github.com/melff/mclogit/releases
